<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="self"
            type="com.github.kr328.clash.design.SettingsDesign" />

        <import type="com.github.kr328.clash.design.SettingsDesign.Request" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@{self.surface.insets.start}"
        android:paddingEnd="@{self.surface.insets.end}">

        <com.github.kr328.clash.design.view.ObservableScrollView
            android:id="@+id/scroll_root"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@{(float) self.surface.insets.top + @dimen/toolbar_height}"
                android:paddingBottom="@{self.surface.insets.bottom}">

                <com.github.kr328.clash.design.view.ActionLabel
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> self.request(Request.StartApp)}"
                    app:icon="@drawable/ic_baseline_settings"
                    app:text="@string/app" />

                <com.github.kr328.clash.design.view.ActionLabel
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> self.request(Request.StartNetwork)}"
                    app:icon="@drawable/ic_baseline_dns"
                    app:text="@string/network" />

                <com.github.kr328.clash.design.view.ActionLabel
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> self.request(Request.StartOverride)}"
                    app:icon="@drawable/ic_baseline_extension"
                    app:text="@string/override" />

                <com.github.kr328.clash.design.view.ActionLabel
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> self.request(Request.StartMetaFeature)}"
                    app:icon="@drawable/ic_baseline_meta"
                    app:text="@string/meta_features" />

            </LinearLayout>
        </com.github.kr328.clash.design.view.ObservableScrollView>

        <com.github.kr328.clash.design.view.ActivityBarLayout
            android:id="@+id/activity_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@{self.surface.insets.top}"
            android:paddingEnd="@dimen/item_tailing_margin">

            <include layout="@layout/common_activity_bar" />
        </com.github.kr328.clash.design.view.ActivityBarLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>